--- a/src/AfterTheSilence.Xamarin/AfterTheSilence.Xamarin.csproj
+++ b/src/AfterTheSilence.Xamarin/AfterTheSilence.Xamarin.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ReactiveUI.Fody" Version="18.3.1" />
+    <PackageReference Include="ReactiveUI.XamForms" Version="18.3.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
   </ItemGroup>
